infra/k8s/local/deployments/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: my-registry:55000/re-api:latest
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: api-service

spec:
  selector:
    app: api

  ports:
    - name: http
      port: 80
      targetPort: 80

  type: ClusterIP
