infra/k8s/local/deployments/ids-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ids-deployment
spec:
  selector:
    matchLabels:
      app: ids
  replicas: 1
  template: # template for the pods ddd
    metadata:
      labels:
        app: ids
    spec:
      containers:
        - name: ids
          image: my-registry:55000/re-ids:latest
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: ids-service

spec:
  # This defines which pods are going to be represented by this Service
  # The service becomes a network endpoint for either other services
  # or maybe external users to connect to (eg browser)
  selector:
    app: ids

  ports:
    - name: http
      port: 80
      targetPort: 80

  type: ClusterIP
