infra/k8s/local/deployments/public-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: public-deployment
spec:
  selector:
    matchLabels:
      app: public
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: public
    spec:
      containers:
        - name: public
          image: my-registry:55000/re-public:latest
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: public-service

spec:
  # This defines which pods are going to be represented by this Service
  # The service becomes a network endpoint for either other services
  # or maybe external users to connect to (eg browser)
  selector:
    app: public

  ports:
    - name: http
      port: 80
      targetPort: 80

  type: ClusterIP
